报价单和销售单

--- a/partsstock-web/.env.development
+++ b/partsstock-web/.env.development
@@ -5,5 +5,5 @@ ENV = 'development'
 # VUE_APP_BASE_API = 'http://localhost:8083/'
 #VUE_APP_BASE_API = 'http://www.shuhongkej.com'
 #VUE_APP_BASE_API = 'http://localhost:12000'
-VUE_APP_BASE_API ='http://www.aishuhong.com:11509'
+#VUE_APP_BASE_API ='http://www.aishuhong.com:11509'
 
