--- a/partsstock-web/package.json
+++ b/partsstock-web/package.json
@@ -63,7 +63,7 @@
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
-    "husky": "1.3.1",
+    "husky": "^1.3.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "lint-staged": "8.1.5",
