--- a/partsstock-web/.env.development
+++ b/partsstock-web/.env.development
@@ -1,9 +1,2 @@
-# just a flag
-ENV = 'development'
-
-# base api
-# VUE_APP_BASE_API = 'http://localhost:8083/'
-#VUE_APP_BASE_API = 'http://www.shuhongkej.com'
-#VUE_APP_BASE_API = 'http://localhost:12000'
-#VUE_APP_BASE_API ='http://www.aishuhong.com:11509'
-
+NODE_ENV = 'development'
+VUE_APP_FLAG = 'development'
