--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "author": "Pan <panfree23@gmail.com>",
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode production",
     "lint": "eslint --ext .js,.vue src",
     "build:prod": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
     "preview": "node build/index.js --preview",
     "new": "plop",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
-    "test:unit": "jest --clearCache && vue-cli-service test:unit",
-    "test:ci": "npm run lint && npm run test:unit"
+    "test": "vue-cli-service build --mode testing"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -23,7 +22,7 @@
     "core-js": "3.6.5",
     "driver.js": "0.9.5",
     "dropzone": "5.5.1",
-    "echarts": "4.2.1",
+    "echarts": "^4.2.1",
     "element-ui": "2.15.5",
     "file-saver": "2.0.1",
     "fuse.js": "3.4.4",
@@ -35,7 +34,6 @@
     "path-to-regexp": "2.4.0",
     "pinyin-match": "^1.2.2",
     "pl-table": "^2.7.5",
-    "print-js": "^1.6.0",
     "qs": "^6.10.1",
     "screenfull": "4.2.0",
     "script-loader": "0.7.2",
@@ -71,9 +69,10 @@
     "lint-staged": "8.1.5",
     "mockjs": "1.0.1-beta3",
     "plop": "^2.7.4",
+    "print-js": "^1.6.0",
     "runjs": "4.3.2",
-    "sass": "1.26.2",
-    "sass-loader": "8.0.2",
+    "sass": "^1.26.2",
+    "sass-loader": "^8.0.2",
     "script-ext-html-webpack-plugin": "2.1.3",
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
